# EncChat

./: .env.example  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  lint.sh  pyproject.toml
backend/app/: database.py  main.py  security.py
backend/app/routers/: chat.py  users.py
frontend/: .dockerignore  Dockerfile  lint.sh  package.json
frontend/conf/nginx/conf.d/: default.conf
frontend/src/: App.tsx  Auth.css  Auth.tsx  Chat.css  Chat.tsx  Helpers.tsx
