[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
]
